--- a/bayleaf-frontend/index.html
+++ b/bayleaf-frontend/index.html
@@ -2,18 +2,28 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Bayleaf</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css"/>
   </head>
   <body>
     <header>
       <h2>Bayleaf!</h2>
     </header>
+    <div id="menu">
+      <span id="all-recipes">View All Recipes</span>
+      <span id="new-recipe">Add New Recipe</span>
+    </div>
 
-    <main>
+    <script type="text/javascript" src="./src/index.js"></script>
+    <script type="text/javascript" src="./src/recipe.js"></script>
+    <script type="text/javascript" src="./src/ingredient.js"></script>
+    <script type="text/javascript" src="./src/instruction.js"></script>
+    <script type="text/javascript" src="./src/IngredientsAdapter.js"></script>
+    <script type="text/javascript" src="./src/InstructionsAdapter.js"></script>
 
-    </main>
 
-    <script src="./src/index.js"></script>
+    
   </body>
 </html>
