consolidated adapters to api.js

--- a/bayleaf-frontend/index.html
+++ b/bayleaf-frontend/index.html
@@ -17,13 +17,10 @@
     </div>
 
     <script type="text/javascript" src="./src/index.js"></script>
+    <script type="text/javascript" src="./src/api.js"></script>
     <script type="text/javascript" src="./src/recipe.js"></script>
     <script type="text/javascript" src="./src/ingredient.js"></script>
     <script type="text/javascript" src="./src/instruction.js"></script>
-    <script type="text/javascript" src="./src/IngredientsAdapter.js"></script>
-    <script type="text/javascript" src="./src/InstructionsAdapter.js"></script>
 
-
-    
   </body>
 </html>
