--- a/bayleaf-frontend/index.html
+++ b/bayleaf-frontend/index.html
@@ -12,8 +12,13 @@
       <h2>Bayleaf!</h2>
     </header>
     <div id="menu">
-      <span id="all-recipes">View All Recipes</span>
+      <span id="all-recipes">View All Recipes</span> |
       <span id="new-recipe">Add New Recipe</span>
+    </div>
+
+    <div id="main">
+
+
     </div>
 
     <script type="text/javascript" src="./src/recipe.js"></script>
