--- a/bayleaf-frontend/index.html
+++ b/bayleaf-frontend/index.html
@@ -10,11 +10,12 @@
   <body>
     <header>
       <h2>Bayleaf!</h2>
+        <div id="menu">
+          <span id="allRecipes">View All Recipes</span> |
+          <span id="new-recipe">Add New Recipe</span>
+        </div>
     </header>
-    <div id="menu">
-      <span id="all-recipes">View All Recipes</span> |
-      <span id="new-recipe">Add New Recipe</span>
-    </div>
+    
 
     <div id="main">
 
