created new recipe form. Recipe title, description, and img_src working.

--- a/bayleaf-frontend/index.html
+++ b/bayleaf-frontend/index.html
@@ -12,7 +12,7 @@
       <h2>Bayleaf!</h2>
         <div id="menu">
           <span id="allRecipes">View All Recipes</span> |
-          <span id="new-recipe">Add New Recipe</span>
+          <span id="newRecipe">Add New Recipe</span>
         </div>
     </header>
     
